nuevo: fragmento header con cambios controlador y adaptacion de las vistas + UsuarioDto y interfaz UsuarioMapper + formulario nuevoUser + controlador y service ; actualización dependencias, update project maven; cambios: SeguridadConfig y nuevo fichero InitialUserDateEncoder